traffic/aggregator.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregator
  namespace: traffic
spec:
  selector:
    matchLabels:
      app: aggregator
  template:
    metadata:
      labels:
        app: aggregator
    spec:
      containers:
        - name: goaccess
          image: ghcr.io/pmh-only/goaccess:latest
          args: 
            - -p
            - /etc/conf/goaccess.conf
            - /logs/all.log
          volumeMounts:
            - name: ds-logs
              mountPath: /logs
            - name: ds-render
              mountPath: /render
            - name: fb-conf
              mountPath: /etc/conf/
          ports:
            - name: ws
              containerPort: 443
          
        - name: servehtml
          image: ghcr.io/pmh-only/busybox:latest
          command:
            - httpd
            - -f
            - -h
            - /render
          volumeMounts:
            - name: ds-render
              mountPath: /render
          ports:
            - name: http
              containerPort: 80

        - name: fluent-bit
          image: cr.fluentbit.io/fluent/fluent-bit:latest
          ports:
            - containerPort: 24224
              name: forward
          volumeMounts:
            - name: ds-logs
              mountPath: /logs
            - name: fb-conf
              mountPath: /fluent-bit/etc/
      volumes:
        - name: ds-logs
          hostPath:
            path: /mnt/data/logs
        - name: fb-conf
          configMap:
            name: aggregator-conf
        - name: ds-render
          emptyDir: {}
