traffic/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traffic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traffic
  template:
    metadata:
      labels:
        app: traffic
    spec:
      containers:
      - name: traffic
        image: ghcr.io/rybbit-io/rybbit-backend:latest
        ports:
        - containerPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traffic-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traffic-client
  template:
    metadata:
      labels:
        app: traffic-client
    spec:
      containers:
      - name: traffic-client
        image: ghcr.io/rybbit-io/rybbit-client:latest
        ports:
        - containerPort: 3002
