traffic/aggregator_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: aggregator
  namespace: traffic
spec:
  ports:
    - name: forward
      port: 24224
      targetPort: 24224
    - name: ws
      port: 443
      targetPort: 443
  selector:
    app: aggregator
