traffic/service.yml
apiVersion: v1
kind: Service
metadata:
  name: traffic-service
spec:
  selector:
    app: traffic
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: traffic-client-service
spec:
  selector:
    app: traffic-client
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
