traffic/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traffic-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: traffic.pmh.codes
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traffic-client-service
            port:
              number: 3002
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traffic-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: traffic.pmh.codes
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: traffic-service
            port:
              number: 3001
